--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,20 @@ h6 {
   height: 350px;
 }
 
+.contactoverlay {
+  background: linear-gradient(
+      37deg,
+      rgba(190, 147, 85, 0.7),
+      rgba(139, 99, 51, 0.3)
+    ),
+    url("../components/assets/images/contact.jpg");
+  /* background-image: ; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 350px;
+}
+
 a {
   text-decoration: none !important;
   color: inherit !important;
